# bay_optim_workshop

./: .gitignore  HACKATHON_TAKS.txt  README.md  instructor_notes.md  pyproject.toml  requirements.txt
blackbox/: __init__.py  beamline.py  gp.py  plotting.py  toy.py
notebooks/: 01_the_expensive_problem.ipynb  02_gaussian_process_from_scratch.ipynb  03_bayesian_optimization_loop.ipynb  04_scaling_up_with_optuna.ipynb
