[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "blackbox"
version = "0.1.0"
description = "Teaching helpers for the Module 5 Bayesian optimization tutorial"
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "matplotlib>=3.7",
    "scikit-learn>=1.3",
    "optuna>=3.6",
]

[tool.setuptools]
packages = ["blackbox"]
